[package]
name = "DNGLab-UI"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[package.metadata.bundle]
name = "DNGLab-UI"
identifier = "com.dnglab-ui.dnglab.ui"
icon = ["assets/icon.icns"]


[dependencies]

slint = "1.12.1"
rfd = "0.15"
shared-string = "0.1"


[build-dependencies]
slint-build = "1.12.1"
